# ckanext-sse

./: MANIFEST.in  README.md  setup.cfg  test.ini
ckanext/sse/: action.py  activity.py  auth.py  dataset_schema.yaml  group_schema.yaml  helpers.py  logic.py  model.py  plugin.py  presets.json  profiles.py  schemas.py  signals.py  utils.py  validators.py
ckanext/sse/assets/: data-reuse-form.js  dataset-modal.js  resource-geospatial.js  restricted-field.js  script.js  style.css  webassets.yml
ckanext/sse/auth/: package.py
ckanext/sse/blueprints/: admin.py  data_reuse.py  request_access_dashboard.py
ckanext/sse/controllers/: user_group.py
ckanext/sse/templates/: base.html  header.html  page.html
ckanext/sse/templates/access_requests/: access_requests_dashboard.html
ckanext/sse/templates/admin/: base.html  verified-users.html
ckanext/sse/templates/data_reuse/: data_reuse_widget.html  list_submissions.html  submission_success.html  submit_form.html  view_submission.html
ckanext/sse/templates/data_reuse/emails/: submission_approved.txt  submission_new.txt  submission_rejected.txt
ckanext/sse/templates/datastore/snippets/: dictionary_form.html
ckanext/sse/templates/package/: read_base.html
ckanext/sse/templates/package/snippets/: package_form.html  resource_form.html  resources_list.html
ckanext/sse/templates/restricted/emails/: restricted_access_request.txt  restricted_access_request_rejected.txt  restricted_user_allowed.txt
ckanext/sse/templates/snippets/: data_reuse_widget.html  search_result_text.html
ckanext/sse/templates/user_group/: user_groups.html
ckanext/sse/tests/: test_plugin.py
ckanext/sse/views/: dataset.py
(+6 files in other folders)
